HTML, CSS and created deck

--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
 </head>
 
 <body>
-  <header>BLACKJACK</header>
+  <h2>Dealer:</h2>
+  <div class="dealer-cards">
+    <img id='face-down'src="./cards/BACK.png">
+    <img src="./cards/2-h.png">
+    
+  </div>
+
+  <h2>Player</h2>
+  <div class="player-cards">
+  
+  </div>
+
+  <div class="action-buttons">
+    <button class="hit-button">Hit</button>
+    <button class="stay-button">Stay</button>
+  </div>
   
 </body>
 
