--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <h2>Dealer:</h2>
   <div class="dealer-cards">
-    <img id='face-down'src="./cards/BACK.png">
+    <img id='faceDown'src="./cards/BACK.png">
     <img src="./cards/2-h.png">
     
   </div>
