Changed a lot. Renamed variables, re-organized, added player action and displayed results

--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
 </head>
 
 <body>
-  <h2>Dealer:</h2>
+  <h2>Dealer</h2>
+  
   <div class="dealer-cards">
-    <img id='faceDown'src="./cards/BACK.png">
-    <img src="./cards/2-h.png">
-    
+    <img id="faceDown"src="./cards/BACK.png">
+    <img id="faceUp" src="./cards/2-H.png">
   </div>
 
   <h2>Player</h2>
-  <div class="player-cards">
   
+  <div class="player-cards">
+    <img id="playerCardOne"src="./cards/10-S.png">
+    <img id="playerCardTwo" src="./cards/2-H.png">
   </div>
 
   <div class="action-buttons">
-    <button class="hit-button">Hit</button>
-    <button class="stay-button">Stay</button>
+    <button id="hitButton">Hit</button>
+    <button id="stayButton">Stay</button>
   </div>
   
 </body>
