--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
 <body>
   <h2>Dealer</h2>
   
+  <div id="dealerScore">0</div>
+
   <div class="dealer-cards">
     <img id="faceDown"src="./cards/BACK.png">
     <img id="faceUp" src="./cards/2-H.png">
   </div>
 
   <h2>Player</h2>
+
+  <div id="playerScore"> 0 </div>
   
   <div class="player-cards">
     <img id="playerCardOne"src="./cards/10-S.png">
