added better visuals, rendered game result

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+
+  <div id="gameOutcome"></div>
+
   <h2>Dealer</h2>
   
   <div id="dealerScore">0</div>
@@ -32,6 +35,8 @@
     <button id="hitButton">Hit</button>
     <button id="stayButton">Stay</button>
   </div>
+
+  <button id="restart">Restart</button>
   
 </body>
 
