added "double" functionality and updated some css

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   </div>
 
   <div class="action-buttons">
+    <button id="doubleButton">Double</button>
     <button id="hitButton">Hit</button>
     <button id="stayButton">Stay</button>
   </div>
